tests/sumo/errors/routes/disconnected_off/errors.sumo
Warning: Teleporting vehicle '0'; waited too long (wrong lane), lane='beg_0', time=327.00.
Warning: Vehicle '0' ends teleporting on edge 'end', time 327.00.
